--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -21,7 +21,9 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = bot_token
+# Hopefully no one uses this untill i find a better way for this.
+# Using Heroku.
+Token = MjE3ODQ0MDQzNjM4NTA1NDcy.Dnsg1g.4HyewfXu_gFpEzvIZpuvkn-ewcw
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
@@ -47,7 +49,7 @@ DevIDs =
 [Chat]
 # Determines the prefix that must be used before commands in the Discord chat.
 # e.g if you set this to *, the play command would be triggered using *play.
-CommandPrefix = !
+CommandPrefix = >
 
 # Restricts the bot to only listening to certain text channels. To use this, add
 # the IDs of the text channels you would like the bot to listen to, seperated by
